--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>PreEntrega Soler</title>
 </head>
 <body>
-    
+    <script src="./productos.js"></script>
     <script src="./main.js"></script>
 </body>
 </html>
