Corregido hasta donde se pudo

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
         <button id="boton-carrito"><i class="fas fa-shopping-cart"></i><span id="contadorCarrito">0</span></button>
     </header>
 
+    
+    <input type="text" id="formulario" class="form-control my-2">
+    <button class="btn btn-info mb-2" id="boton">Buscar</button>
+
+    
 
     <main id="contenedor-productos">
 
